@@ -14,8 +14,10 @@ import org.elasticsearch.Version;
 import org.elasticsearch.common.UUIDs;
 import org.elasticsearch.common.bytes.BytesReference;
 import org.elasticsearch.common.util.Maps;
+import org.elasticsearch.core.Tuple;
 import org.elasticsearch.index.IndexVersion;
 import org.elasticsearch.index.IndexVersions;
+import org.elasticsearch.repositories.FinalizeSnapshotContext.UpdatedShardGenerations;
 import org.elasticsearch.snapshots.SnapshotId;
 import org.elasticsearch.snapshots.SnapshotState;
 import org.elasticsearch.test.ESTestCase;
@@ -31,6 +33,7 @@ import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
 import java.util.HashSet;
+import java.util.Iterator;
 import java.util.LinkedHashSet;
 import java.util.List;
 import java.util.Map;
@@ -118,7 +121,7 @@ public class RepositoryDataTests extends ESTestCase {
                 randomNonNegativeLong(),
                 randomAlphaOfLength(10)
             ),
-            shardGenerations,
+            new UpdatedShardGenerations(shardGenerations, ShardGenerations.EMPTY),
             indexLookup,
             indexLookup.values().stream().collect(Collectors.toMap(Function.identity(), ignored -> UUIDs.randomBase64UUID(random())))
         );
@@ -218,7 +221,7 @@ public class RepositoryDataTests extends ESTestCase {
                 randomNonNegativeLong(),
                 randomAlphaOfLength(10)
             ),
-            ShardGenerations.EMPTY,
+            UpdatedShardGenerations.EMPTY,
             Collections.emptyMap(),
             Collections.emptyMap()
         );
@@ -344,6 +347,15 @@ public class RepositoryDataTests extends ESTestCase {
         }
     }
 
+    private Map<IndexId, Collection<String>> processIndicesToUpdate(Iterator<Tuple<IndexId, Collection<String>>> iterator) {
+        final var result = new HashMap<IndexId, Collection<String>>();
+        while (iterator.hasNext()) {
+            var tuple = iterator.next();
+            assertNull("duplicates not expected", result.put(tuple.v1(), tuple.v2()));
+        }
+        return result;
+    }
+
     // Test removing snapshot from random data where no two snapshots share any index metadata blobs
     public void testIndexMetaDataToRemoveAfterRemovingSnapshotNoSharing() {
         final RepositoryData repositoryData = generateRandomRepoData();
@@ -357,7 +369,11 @@ public class RepositoryDataTests extends ESTestCase {
             .collect(
                 Collectors.toMap(Map.Entry::getKey, e -> Collections.singleton(indexMetaDataGenerations.getIndexMetaBlobId(e.getValue())))
             );
-        assertEquals(repositoryData.indexMetaDataToRemoveAfterRemovingSnapshots(Collections.singleton(snapshotId)), identifiersToRemove);
+
+        assertEquals(
+            identifiersToRemove,
+            processIndicesToUpdate(repositoryData.indexMetaDataToRemoveAfterRemovingSnapshots(List.of(snapshotId)))
+        );
     }
 
     // Test removing snapshot from random data that has some or all index metadata shared
@@ -400,14 +416,21 @@ public class RepositoryDataTests extends ESTestCase {
             randomNonNegativeLong(),
             randomAlphaOfLength(10)
         );
-        final RepositoryData newRepoData = repositoryData.addSnapshot(newSnapshot, details, shardGenerations, indexLookup, newIdentifiers);
-        assertEquals(
-            newRepoData.indexMetaDataToRemoveAfterRemovingSnapshots(Collections.singleton(newSnapshot)),
-            newIndices.entrySet()
-                .stream()
-                .collect(Collectors.toMap(Map.Entry::getKey, e -> Collections.singleton(newIdentifiers.get(e.getValue()))))
+        final RepositoryData newRepoData = repositoryData.addSnapshot(
+            newSnapshot,
+            details,
+            new UpdatedShardGenerations(shardGenerations, ShardGenerations.EMPTY),
+            indexLookup,
+            newIdentifiers
         );
-        assertEquals(newRepoData.indexMetaDataToRemoveAfterRemovingSnapshots(Collections.singleton(otherSnapshotId)), removeFromOther);
+        assertEquals(
+            newIndices.entrySet().stream().collect(Collectors.toMap(Map.Entry::getKey, e -> Set.of(newIdentifiers.get(e.getValue())))),
+            processIndicesToUpdate(newRepoData.indexMetaDataToRemoveAfterRemovingSnapshots(List.of(newSnapshot)))
+        );
+        assertEquals(
+            removeFromOther,
+            processIndicesToUpdate(newRepoData.indexMetaDataToRemoveAfterRemovingSnapshots(List.of(otherSnapshotId)))
+        );
     }
 
     public void testFailsIfMinVersionNotSatisfied() throws IOException {
@@ -476,7 +499,7 @@ public class RepositoryDataTests extends ESTestCase {
                     randomNonNegativeLong(),
                     randomAlphaOfLength(10)
                 ),
-                builder.build(),
+                new UpdatedShardGenerations(builder.build(), ShardGenerations.EMPTY),
                 indexLookup,
                 indexLookup.values().stream().collect(Collectors.toMap(Function.identity(), ignored -> UUIDs.randomBase64UUID(random())))
             );
