@@ -7,16 +7,13 @@
 
 package org.elasticsearch.xpack.esql.expression.function.aggregate;
 
-import org.elasticsearch.TransportVersions;
 import org.elasticsearch.common.io.stream.NamedWriteableRegistry;
 import org.elasticsearch.common.io.stream.StreamInput;
-import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.compute.aggregation.AggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileDoubleAggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileIntAggregatorFunctionSupplier;
 import org.elasticsearch.compute.aggregation.PercentileLongAggregatorFunctionSupplier;
 import org.elasticsearch.xpack.esql.core.expression.Expression;
-import org.elasticsearch.xpack.esql.core.expression.FoldContext;
 import org.elasticsearch.xpack.esql.core.expression.Literal;
 import org.elasticsearch.xpack.esql.core.tree.NodeInfo;
 import org.elasticsearch.xpack.esql.core.tree.Source;
@@ -27,6 +24,7 @@ import org.elasticsearch.xpack.esql.expression.function.FunctionInfo;
 import org.elasticsearch.xpack.esql.expression.function.FunctionType;
 import org.elasticsearch.xpack.esql.expression.function.Param;
 import org.elasticsearch.xpack.esql.expression.function.scalar.convert.ToDouble;
+import org.elasticsearch.xpack.esql.expression.function.scalar.histogram.HistogramPercentile;
 import org.elasticsearch.xpack.esql.expression.function.scalar.multivalue.MvPercentile;
 import org.elasticsearch.xpack.esql.io.stream.PlanStreamInput;
 
@@ -37,7 +35,9 @@ import static java.util.Collections.singletonList;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.FIRST;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.ParamOrdinal.SECOND;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isFoldable;
+import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isNotNull;
 import static org.elasticsearch.xpack.esql.core.expression.TypeResolutions.isType;
+import static org.elasticsearch.xpack.esql.expression.Foldables.doubleValueOf;
 
 public class Percentile extends NumericAggregate implements SurrogateExpression {
     public static final NamedWriteableRegistry.Entry ENTRY = new NamedWriteableRegistry.Entry(
@@ -54,18 +54,15 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
             + "For example, the 95th percentile is the value which is greater than 95% of the "
             + "observed values and the 50th percentile is the `MEDIAN`.",
         appendix = """
-            [discrete]
-            [[esql-percentile-approximate]]
-            ==== `PERCENTILE` is (usually) approximate
+            ### `PERCENTILE` is (usually) approximate [esql-percentile-approximate]
 
-            include::../../../aggregations/metrics/percentile-aggregation.asciidoc[tag=approximate]
+            :::{include} /reference/aggregations/_snippets/search-aggregations-metrics-percentile-aggregation-approximate.md
+            :::
 
-            [WARNING]
-            ====
+            ::::{warning}
             `PERCENTILE` is also {wikipedia}/Nondeterministic_algorithm[non-deterministic].
             This means you can get slightly different results using the same data.
-            ====
-            """,
+            ::::""",
         type = FunctionType.AGGREGATE,
         examples = {
             @Example(file = "stats_percentile", tag = "percentile"),
@@ -79,14 +76,14 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
     )
     public Percentile(
         Source source,
-        @Param(name = "number", type = { "double", "integer", "long" }) Expression field,
+        @Param(name = "number", type = { "double", "integer", "long", "exponential_histogram", "tdigest" }) Expression field,
         @Param(name = "percentile", type = { "double", "integer", "long" }) Expression percentile
     ) {
-        this(source, field, Literal.TRUE, percentile);
+        this(source, field, Literal.TRUE, NO_WINDOW, percentile);
     }
 
-    public Percentile(Source source, Expression field, Expression filter, Expression percentile) {
-        super(source, field, filter, singletonList(percentile));
+    public Percentile(Source source, Expression field, Expression filter, Expression window, Expression percentile) {
+        super(source, field, filter, window, singletonList(percentile));
         this.percentile = percentile;
     }
 
@@ -94,16 +91,10 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
         this(
             Source.readFrom((PlanStreamInput) in),
             in.readNamedWriteable(Expression.class),
-            in.getTransportVersion().onOrAfter(TransportVersions.V_8_16_0) ? in.readNamedWriteable(Expression.class) : Literal.TRUE,
-            in.getTransportVersion().onOrAfter(TransportVersions.V_8_16_0)
-                ? in.readNamedWriteableCollectionAsList(Expression.class).get(0)
-                : in.readNamedWriteable(Expression.class)
+            in.readNamedWriteable(Expression.class),
+            readWindow(in),
+            in.readNamedWriteableCollectionAsList(Expression.class).getFirst()
         );
-    }
-
-    @Override
-    protected void deprecatedWriteParams(StreamOutput out) throws IOException {
-        out.writeNamedWriteable(percentile);
     }
 
     @Override
@@ -113,17 +104,17 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
 
     @Override
     protected NodeInfo<Percentile> info() {
-        return NodeInfo.create(this, Percentile::new, field(), filter(), percentile);
+        return NodeInfo.create(this, Percentile::new, field(), filter(), window(), percentile);
     }
 
     @Override
     public Percentile replaceChildren(List<Expression> newChildren) {
-        return new Percentile(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2));
+        return new Percentile(source(), newChildren.get(0), newChildren.get(1), newChildren.get(2), newChildren.get(3));
     }
 
     @Override
     public Percentile withFilter(Expression filter) {
-        return new Percentile(source(), field(), filter, percentile);
+        return new Percentile(source(), field(), filter, window(), percentile);
     }
 
     public Expression percentile() {
@@ -138,10 +129,10 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
 
         TypeResolution resolution = isType(
             field(),
-            dt -> dt.isNumeric() && dt != DataType.UNSIGNED_LONG,
+            dt -> (dt.isNumeric() && dt != DataType.UNSIGNED_LONG) || dt == DataType.EXPONENTIAL_HISTOGRAM || dt == DataType.TDIGEST,
             sourceText(),
             FIRST,
-            "numeric except unsigned_long"
+            "exponential_histogram, tdigest or numeric except unsigned_long"
         );
         if (resolution.unresolved()) {
             return resolution;
@@ -153,7 +144,7 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
             sourceText(),
             SECOND,
             "numeric except unsigned_long"
-        ).and(isFoldable(percentile, sourceText(), SECOND));
+        ).and(isFoldable(percentile, sourceText(), SECOND)).and(isNotNull(percentile, sourceText(), SECOND));
     }
 
     @Override
@@ -171,14 +162,18 @@ public class Percentile extends NumericAggregate implements SurrogateExpression 
         return new PercentileDoubleAggregatorFunctionSupplier(percentileValue());
     }
 
-    private int percentileValue() {
-        return ((Number) percentile.fold(FoldContext.small() /* TODO remove me */)).intValue();
+    private double percentileValue() {
+        return doubleValueOf(percentile(), source().text(), "Percentile");
     }
 
     @Override
     public Expression surrogate() {
         var field = field();
+        DataType fieldType = field.dataType();
 
+        if (fieldType == DataType.EXPONENTIAL_HISTOGRAM || fieldType == DataType.TDIGEST) {
+            return new HistogramPercentile(source(), new HistogramMerge(source(), field, filter(), window()), percentile());
+        }
         if (field.foldable()) {
             return new MvPercentile(source(), new ToDouble(source(), field), percentile());
         }
